login UI working correctly

--- a/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
+++ b/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
@@ -934,8 +934,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="X4L-Sx-yz3"/>
-        <segue reference="2zV-sZ-Ao8"/>
+        <segue reference="y5f-Py-GiX"/>
         <segue reference="3Lk-Y4-FqU"/>
-        <segue reference="GOk-TC-ljM"/>
+        <segue reference="43G-PM-1Il"/>
     </inferredMetricsTieBreakers>
 </document>
